# dotbot-windows

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.rst  dotbot_windows.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yaml
changelog.d/: 20230714_220759_kurtmckee_support_import_without_winreg.rst  20230726_092845_kurtmckee_increase_testing.rst  20240320_081046_kurtmckee_support_fonts.rst  20240325_083839_kurtmckee_update_readme.rst
requirements/: test.in
requirements/test/: requirements.txt
tests/: conftest.py  test_fonts.py  test_personalization.py  test_plugin.py  test_registry.py  test_validate_data.py
