[project]
name = "dotbot-windows"
version = "1.1.0"
description = "Configure Windows using dotbot"
authors = [
    { name = "Kurt McKee", email = "contactme@kurtmckee.org" },
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9"
repository = ""
keywords = [
    "dotbot",
    "dotbot-plugin",
    "windows",
    "dotfiles",
]
dependencies = [
    "dotbot >=1.20.1",
]

[project.urls]
Source = "https://github.com/kurtmckee/dotbot-windows"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# coverage
# --------

[tool.coverage.run]
branch = true
parallel = true
data_file = ".tox/.coverage-data-files/.coverage"
source = [
    "dotbot_windows",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
fail_under = 100


# mypy
# ----

[tool.mypy]
packages = "dotbot_windows"
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
    "dotbot.*",
    "pytest",
]
ignore_missing_imports = true


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Python support",
    "Dotbot support",
    "Added",
    "Removed",
    "Changed",
    "Fixed",
    "Documentation",
    "Development",
]
